feat(event): Add create & update event, register event for user
